--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     background-position: center center;
     background-attachment: scroll;
     background-size: cover;
+    
 }
 
 nav{
@@ -50,6 +51,7 @@ nav ul li a:hover, a.active{
     padding: 25px;
     border-radius: 5px;
     float: left;
+    
 }
 .booking-form h3{
     margin: 10px 0px;
@@ -155,4 +157,7 @@ nav ul li a:hover, a.active{
     background-color: rgba(208, 233, 245, 0.541);
     padding: 10px;
     border-radius: 10px;
+}
+.total-calculations-area{
+    float: right;
 }
