--- a/style.css
+++ b/style.css
@@ -131,14 +131,18 @@ nav ul li a:hover, a.active{
     width: 100%;
 }
 #confirmation-area{
-    background-color: #ffffff;
-    width: 100%;
-    height: 100%;
-    box-shadow: 3px 3px 10px 10px rgb(110, 161, 243);
+    background-color: #c5e0fad4;
+    width: 75%;
+    height: 270%;
+    box-shadow: 3px 3px 10px 10px rgb(110 161 243 / 31%);
     border-radius: 10px;
     display: none;
-    padding: 143px 208px;
-    margin-top: 100px;
+    align-items: right;
+    text-align: center;
+    color :black;
+    padding: 5px;
+    
+
 }
 .total-ticket-price{
     height:40px;
